--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,37 @@
 version: "3"
 services:
   emr-service:
-    image: omrsregrepo/bahmni_092_emr:02122020
+    image: bahmni92_emr_only_microservice
     restart: unless-stopped
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     command: [/usr/sbin/init, /bin/bash, "--privileged"]
     ports:
-      - "443:443"
-      - "80:80"
+      - "443:443" #https
+      - "80:80" #http
       - "8000:8000"
+      - "8050:8050" #openmrs ws and rest api live here
+    networks:
+            hmis_network:
+                ipv4_address: 172.27.0.3
+                
   erp-service:
-    image: omrsregrepo/bahmni_092_erp:02122020
+    image: bahmni92_erp_only_microservice
     privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    command: [/usr/sbin/init, /bin/bash, "--privileged"]
     ports:
-      - "8069:8069"
+      - "8069:8069" #odoo lives here
+    networks:
+            hmis_network:
+                ipv4_address: 172.27.0.2
     restart: unless-stopped
+    
+networks:
+    hmis_network:
+        ipam:
+            driver: default
+            config:
+                - subnet: 172.27.0.0/16
